k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /riot-api(/|$)(.*)
            backend:
              serviceName: riot-api
              servicePort: 8082
          - path: /data-catalogue(/|$)(.*)
            backend:
              serviceName: data-catalogue
              servicePort: 8081
          - path: /prediction(/|$)(.*)
            backend:
              serviceName: prediction
              servicePort: 8081
